# genomenlp

./: .readthedocs.yml  CITATION.cff  LICENSE  README.md  pyproject.toml  tyagilab.py  wandB_sweep_XGboost.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: anaconda.yml  main.yml
DNA_Recoding/results/: dna2vec-20220515-1639-k3to8-100d-10c-29320Mbp-sliding-MMz.txt  dna2vec-20220517-1255-k3to8-100d-10c-0Mbp-sliding-pj0.txt  dna2vec-20220517-1257-k3to8-100d-10c-470Mbp-sliding-Cy0.txt
DNA_Recoding/src/dna2vec/: multi_k_model.py
_ref/: convert_input.py  deg_to_bed.py  example.py  fasta_to_dataset.py  find_features.py  find_features_d2v.py  find_features_w2v.py  get_ecoli.sh  gtf_to_fasta.sh  kmerise_genome.py  ngram_fasta.py  offset_bed.py  shuffle_bed.py  tmp.py  tokenise.md  tokenise.py  train_model.py  utils.py
data/: Data_XGBoost.csv  PromoterSet.fa  PromoterSet.txt  get_data.sh
data/foundation/: parse_grch38p14.py
data/foundation/out_segments/: README.md
docs/: requirements.txt
docs/data/dna/: get_dna_data.sh
docs/data/protein/: get_protein_data.sh
docs/data/rna/: get_rna_data.sh
docs/source/: case_study.rst  case_study_dna.rst  case_study_intro.rst  case_study_protein.rst  conf.py  create_dataset.rst  create_dataset_bio.rst  create_dataset_nlp.rst  create_embedding.rst  cross_validate.rst  fit_powerlaw.rst  generate_synthetic.rst  index.rst  interpret.rst  intro.rst  modules.rst  setup_tutorial.sh  sweep.rst  tokenise.rst  train_model.rst
etc/: build.yml
fig/: application_chart_citation.csv  application_chart_field.csv  application_chart_year.csv  bio_cvec_rf_random_cval_auc.tsv  bio_cvec_xg_random_cval_auc.tsv  bio_distilbert_random_cval_auc.tsv  bio_tfidf_rf_random_cval_auc.tsv  bio_tfidf_xg_random_cval_auc.tsv  bio_w2v_rf_random_cval_auc.tsv  bio_w2v_xg_random_cval_auc.tsv  create_figs.py  methods_chart_citation.csv  methods_chart_field.csv  methods_chart_year.csv  plot_auc.py
src/: English dataset.py  RFclassifier.py  Randomforest_hyp.py  Randomforest_hyp_bay.py  Randomforest_hyp_bay_wandb.py  SP-cvec-tfidf_eng.py  SP-cvec_eng.py  SP_cvec-tfidf_bio.py  SP_cvec_bio.py  UMAPs_kmers.py  W2v&RFclassifier_en  XGBoostImplementationA-Z.py  XGBoostImplementationA-Z_WandB.py  XGBoost_Implementation.py  XGBoost_Implementation_A-Z-ConfusionMatrix_CrossVal  XGBoost_Implementation_A-Z.py  XGBoost_Implementation_GridSearch.py  XGBoost_Implementation_RandomizedSearch.py  XGBoost_WandB_Implementation.py  XGBoost_wandb.py  bio_cvec.py  copy_of_word2vec.py  countvectorisesa_z.py  create_dataset.py  create_dataset_bio.md  create_dataset_bio.py  create_dataset_nlp.py  create_embedding_bio_kmers.py  create_embedding_bio_sp.py  cross_validate.py  cvec-tfidf_bio.py  cvec-tfidf_eng.py  cvec_bio.py  cvec_eng.py  embedding_pipeline.py  evaluate_model.py  example.json  fit_powerlaw.py  freq_pipeline.py  generate_synthetic.md  (+20 more)
src/Ziran_Codes_DNA/Codes/Plots/: cvec_eng_xgboost.py  cvec_xgboost_bio.py  tfidf_bio_xgboost.py  tfidf_eng_xgboost.py
src/Ziran_Codes_DNA/Codes/Plots/curves_i.e_ROC/: Learning_xgb.py
src/Ziran_Codes_DNA/Codes/classifier/: classifier.py  read.md
src/Ziran_Codes_DNA/Codes/cover/: cvec.py  read.md
src/Ziran_Codes_DNA/Codes/dna2vec/: dna2vec.py  read.md
src/Ziran_Codes_DNA/Codes/preprocess_dna/: preprocess_dna.py  read.md
src/Ziran_Codes_DNA/Codes/tfidf/: read.md  tfidf.py
src/docs/source/: conf.py  index.rst  intro.rst
src/genomenlp/: build.yaml  compare_empirical_tokens.py  create_dataset_bio.py  create_dataset_nlp.py  create_embedding_bio_kmers.py  create_embedding_bio_sp.py  cross_validate.py  embedding_pipeline.py  fit_powerlaw.py  freq_pipeline.py  generate_synthetic.py  interpret.py  kmerise_bio.py  meta.yaml  parse_sp_tokens.py  plot_importances.py  recipe.yaml  remap_sp_tokens.py  summarise_metrics.py  sweep.py  tokenise_bio.py  tokenise_nlp.py  train.py  utils.py
src/jupyter/: case_study_dna.ipynb
src/ziran/: create_dataset_bio.py  create_dataset_nlp.py  embedding_pipeline.py  fit_powerlaw.py  freq_pipeline.py  generate_synthetic.py  interpret_transformers.py  kmerise_bio.py  meta.yaml  parse_sp_tokens.py  summarise_metrics.py  sweep.py  tokenise_bio.py  tokenise_nlp.py  train.py  utils.py
ziran/: create_embedding_bio_sp.py  cross_validate.py  embedding_pipeline.py  meta.yaml  utils.py
